Bug 4285 - ADM1021 Driver Does not report remote Temp alarms.
Summary: ADM1021 Driver Does not report remote Temp alarms.
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Hardware Monitoring (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Jean Delvare
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-03-03 22:57 UTC by Jayakrishnan
Modified: 2005-08-08 12:17 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.7
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
Fix incorrect alarms bitmasking (691 bytes, patch)
2005-03-04 04:06 UTC, Jean Delvare
Details | Diff

Description Jayakrishnan 2005-03-03 22:57:57 UTC
Distribution: gentoo
Kernel      : 2.6.7
Hardware Environment: PC/ I386
Software Environment:
Problem Description:
In the ADM1021 Sensor driver temperature alarm is masked with a constant 0xEC.
For the CHIP ADM1021A, bit 4 is RHIGH, because of the mask the  RHIGH Flag is
cleared in the alarm value. so the Remote Temp High is never reported.

Steps to reproduce:
Comment 1 Jean Delvare 2005-03-04 03:50:18 UTC
Good catch. The mask should actually be 0x7c, not 0xec. The bug was present
since the driver was ported (2.5.54).
Comment 2 Jean Delvare 2005-03-04 04:06:52 UTC
Created attachment 4661 [details]
Fix incorrect alarms bitmasking

Note You need to log in before you can comment on or make changes to this bug.